--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "20.4.6",
     "gts": "^5.0.1",
-    "typescript": "~5.1.6",
-    "@types/node": "20.4.6"
+    "typescript": "~5.1.6"
   }
 }
