is this better?

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "jsautomaton",
+  "name": "automaton",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A TypeScript library for building automatons",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "gts lint",
@@ -13,7 +14,7 @@
     "pretest": "npm run compile",
     "posttest": "npm run lint"
   },
-  "author": "",
+  "author": "Malcolm Anderson",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "20.4.6",
