--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
+    "target": "ES6",
     "module": "CommonJS",
-    "outDir": "lib",
     "declaration": true,
-    "lib": []
+    "outDir": "lib",
+    "strict": true
   },
   "include": [
     "src/**/*.ts",
